@@ -4,7 +4,8 @@
 
  Changes between 1.0.2 and 1.0.2a [xx XXX xxxx]
 
-  *)
+  *) Removed the export ciphers from the DEFAULT ciphers
+     [Kurt Roeckx]
 
  Changes between 1.0.1l and 1.0.2 [22 Jan 2015]
 
